# ASFMLogger

./: ASFMLogger.cpp  ASFMLogger.hpp  ASFMLogger_HeaderOnly.hpp  CMakeLists.txt  CMakeLists_New.txt  DEPENDENCIES.md  README.md  check_system_status.bat  package-lock.json  package.json  setup_dependencies.bat  setup_dependencies.sh  vcpkg.json
build_verification/: CMakeCache.txt
cmake/: ASFMLoggerConfig.cmake.in
deploy/: create_packages.bat  create_packages.sh  install_service.bat  install_service.sh  production.config.json
docs/: ARCHITECTURE_GUIDE.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT_PLAN.md  FILE_STRUCTURE.md  TODO_TRACKING.md
docs/guides/: API_REFERENCE.md  ARCHITECTURE_GUIDE.md  DEVELOPMENT_PLAN.md  FILE_STRUCTURE.md  HEADER_ONLY_GUIDE.md  SF-TESTING_PLAN.md  TODO_TRACKING.md
docs/implementation/: IMPLEMENTATION_GUIDELINES.md  SF-001A_LoggerInstance_Complete_Implementation.md  SF-001_LoggerInstance_Implementation.md  SF-002A_LogMessage_Complete_Implementation.md  SF-002_LogMessage_Enhancement.md  SF-003_ImportanceMapper_Implementation.md  SF-004_SmartMessageQueue_Implementation.md  SF-005_DatabaseLogger_Implementation.md  SF-P0_Critical_Compilation_Fixes.md  STATEFUL_LAYER_MASTER_TASK_LIST.md
examples/: CMakeLists.txt  built_library_example.cpp  test_header_only.cpp
examples/basic/: header_only_example.cpp  simple_working_example.cpp
include/asfmlogger/: ASFMLogger_Simple.hpp
include/stateful/: DatabaseLogger.hpp  LogMessage.hpp  SmartMessageQueue.hpp
src/: ASFMLoggerCore.cpp  ASFMLoggerCore.hpp
src/core/: ASFMLogger.cpp
src/enhanced/: ASFMLoggerEnhanced.cpp
src/managers/: ConfigurationManager.hpp  ContextualPersistenceManager.cpp  ContextualPersistenceManager.hpp  LoggerInstanceManager.cpp  LoggerInstanceManager.hpp  MessageQueueManager.hpp  MonitoringManager.hpp
src/stateful/: DatabaseLogger.cpp  DatabaseLogger.hpp  ImportanceMapper.cpp  ImportanceMapper.hpp  LogMessage.cpp  LogMessage.hpp  LoggerInstance.cpp  LoggerInstance.hpp  SmartMessageQueue.cpp  SmartMessageQueue.hpp
src/structs/: ConfigurationData.hpp  DatabaseConfiguration.hpp  ImportanceConfiguration.hpp  LogDataStructures.hpp  LoggerInstanceData.hpp  MonitoringData.hpp  PersistencePolicy.hpp  SmartQueueConfiguration.hpp
src/toolbox/: ConfigurationToolbox.cpp  ConfigurationToolbox.hpp  ContextualPersistenceToolbox.cpp  ContextualPersistenceToolbox.hpp  DatabaseToolbox.cpp  DatabaseToolbox.hpp  ImportanceToolbox.cpp  ImportanceToolbox.hpp  LogMessageToolbox.cpp  LogMessageToolbox.hpp  LoggerInstanceToolbox.cpp  LoggerInstanceToolbox.hpp  LoggingToolbox.cpp  LoggingToolbox.hpp  MonitoringToolbox.cpp  MonitoringToolbox.hpp  SmartQueueToolbox.cpp  SmartQueueToolbox.hpp  TimestampToolbox.cpp  TimestampToolbox.hpp
src/utils/: CrossLanguageSerialization.hpp
src/web/: RestApiServer.hpp
src/web/dashboard/: dashboard.js  index.html  styles.css
tests/: CMakeLists.txt  test_config.json  test_python_advanced_features.py
tests/benchmarks/: benchmark_comprehensive.cpp  benchmark_database_logger.cpp  benchmark_importance_mapper.cpp  benchmark_infrastructure.cpp  benchmark_loggerinstance.cpp  benchmark_logmessage.cpp  benchmark_main.cpp  benchmark_smart_message_queue.cpp
tests/integration/: integration_test.cpp  simple_stateful_test.cpp  test_csharp_integration.cpp  test_csharp_wrapper.cs  test_integration_cross_language_ecosystem.cpp  test_integration_logging_workflow.cpp  test_integration_monitoring_web_interface.cpp  test_integration_smart_queue_workflow.cpp  test_integration_testing.cpp  test_mql5_integration.cpp  test_mql5_wrapper.cpp  test_nodejs_wrapper.js  test_python_integration.cpp  test_python_wrapper.py  test_stateful_layer.cpp
tests/unit/: test_configuration_toolbox.cpp  test_contextual_persistence_toolbox.cpp  test_database_logger.cpp  test_database_toolbox.cpp  test_enhanced_logger.cpp  test_importance_mapper.cpp  test_importance_toolbox.cpp  test_log_message_toolbox.cpp  test_logger_instance_toolbox.cpp  test_logging_toolbox.cpp  test_main.cpp  test_monitoring_toolbox.cpp  test_performance_monitoring.cpp  test_smart_message_queue.cpp  test_suite_runner.cpp  test_timestamp_toolbox.cpp  test_toolbox_algorithms.cpp  test_toolbox_classes.cpp
tests/unit/core/: simple_test.cpp  test_core_database_logger.hpp  test_core_importance_mapper.cpp  test_core_importance_mapper.hpp  test_core_smart_message_queue.cpp  test_core_smart_message_queue.hpp  unit_test_database_logger.cpp  unit_test_importance_mapper.cpp  unit_test_loggerinstance.cpp  unit_test_logmessage.cpp  unit_test_smart_message_queue.cpp
tools/development/: testing_report.sh
wrappers/: CMakeLists.txt
wrappers/csharp/: ASFMLogger.Wrapper.csproj  ASFMLogger.Wrapper.csproj.in  ASFMLogger.cs  CMakeLists.txt
wrappers/mql5/: ASFMLogger.mqh  CMakeLists.txt
wrappers/python/: CMakeLists.txt  asfm_logger.py  setup.py.in
